--- a/site/styles.css
+++ b/site/styles.css
@@ -13,9 +13,9 @@ h1{
   width: 100%;
 }
 section{
-  background-color: gray;
+  background-color: #94A7AD;
   height: 260px;
-  padding:4px;
+  padding:15px;
   margin: 10px;
   position: relative;
   padding-top: 60px;
