--- a/mod3_sol/main.css
+++ b/mod3_sol/main.css
@@ -1,3 +1,6 @@
+#move{
+	color: white;
+}
 .navbar{
 	background-color: maroon;
 }
@@ -5,19 +8,25 @@
 	font-size: 2.6em;
 }
 #bs-example-navbar-collapse-1{
-	background-color: yellow;
+	background-color: white;
 }
 li{
 	font-size: 1.5em;
+	color: #000;
 }
 .row{
-	margin-right: 0px;
-	margin-left: 0px;
+	margin-right: 30px;
+	margin-left: 30px;
 }
-.col-xs-12{
-	background-color: gray;
-	margin-bottom: 10px;
-	height: 700px;
+.col-xs-12 {
+	background-color: rgba(0, 0, 0, 0.2);
+	height: 600px;
+	margin-bottom: 20px;
 	text-decoration: none;
 	color: black;
+}
+h1{
+	margin-bottom: 40px;
+	font-weight: bold;
+
 }
